--- a/index.html
+++ b/index.html
@@ -311,12 +311,13 @@
                 position: relative;
                 height: 24px;
                 flex-shrink: 0;
-                background: #f5f5f5;
+                background: transparent;
+                border-bottom: 1px solid rgba(0,0,0,0.08);
             }
 
-            #st-progress-bar::before { top: 11px; height: 3px; background: rgba(0,0,0,0.06); }
-            #st-progress-fill { top: 11px; height: 3px; }
-            #st-progress-fill::after { opacity: 1; width: 14px; height: 14px; right: -7px; }
+            #st-progress-bar::before { top: 11px; height: 2px; background: rgba(0,0,0,0.08); }
+            #st-progress-fill { top: 11px; height: 2px; }
+            #st-progress-fill::after { opacity: 1; width: 12px; height: 12px; right: -6px; }
 
             #story {
                 margin-left: 0;
