--- a/index.html
+++ b/index.html
@@ -1603,11 +1603,11 @@
             sessionStorage.setItem('mobile-noted', '1');
             var note = document.createElement('div');
             note.style.cssText = 'position:fixed;bottom:24px;left:50%;transform:translateX(-50%);z-index:9999;background:rgba(0,0,0,0.75);color:rgba(255,255,255,0.9);padding:10px 20px;border-radius:20px;font-size:0.8rem;font-family:"EB Garamond",Georgia,serif;font-style:italic;backdrop-filter:blur(8px);opacity:0;transition:opacity 0.5s;pointer-events:none;text-align:center;max-width:90vw';
-            note.textContent = 'Some features like 3D terrain may be limited on mobile';
+            note.innerHTML = 'Some features like 3D terrain may be limited on mobile.<br>Try a computer browser for the full experience.';
             document.body.appendChild(note);
             setTimeout(function () { note.style.opacity = '1'; }, 200);
-            setTimeout(function () { note.style.opacity = '0'; }, 4500);
-            setTimeout(function () { note.remove(); }, 5000);
+            setTimeout(function () { note.style.opacity = '0'; }, 5500);
+            setTimeout(function () { note.remove(); }, 6000);
         }
     </script>
 
