--- a/index.html
+++ b/index.html
@@ -1598,9 +1598,8 @@
         window.addEventListener('hashchange', handleHash);
         handleHash();
 
-        // Mobile notice (once per session)
-        if (isMobile && !sessionStorage.getItem('mobile-noted')) {
-            sessionStorage.setItem('mobile-noted', '1');
+        // Mobile notice (every page load)
+        if (isMobile) {
             var note = document.createElement('div');
             note.style.cssText = 'position:fixed;bottom:24px;left:50%;transform:translateX(-50%);z-index:9999;background:rgba(0,0,0,0.75);color:rgba(255,255,255,0.9);padding:10px 20px;border-radius:20px;font-size:0.8rem;font-family:"EB Garamond",Georgia,serif;font-style:italic;backdrop-filter:blur(8px);opacity:0;transition:opacity 0.5s;pointer-events:none;text-align:center;max-width:90vw';
             note.innerHTML = 'Some features like 3D terrain may be limited on mobile.<br>Try a computer browser for the full experience.';
