Narrower story pane, add Google Analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H792D7W78P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-H792D7W78P');
+    </script>
     <title>PCT by SLR</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -83,7 +91,7 @@
             position: fixed;
             left: 0;
             top: 2px;
-            width: 50%;
+            width: 57%;
             bottom: 0;
         }
 
@@ -142,8 +150,8 @@
         #day-counter .scroll-arrow { display: inline-block; margin-left: 6px; opacity: 0.5; }
 
         #story {
-            margin-left: 50%;
-            width: 50%;
+            margin-left: 57%;
+            width: 43%;
             padding: 40px 48px 60px;
             min-height: 100vh;
         }
