Tweak intro text, link to personal site

--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
         <div id="story">
             <div class="hero">
                 <h1>2,751 Miles North</h1>
-                <p class="about-text">Hello! I'm Sam. Some friends and I walked north for a few months in 2021. I was really gunning for a Taco Bell sponsorship but never got one. Luckily it's the journey that counts.</p>
+                <p class="about-text">I'm <a href="https://samryan18.github.io/" target="_blank" style="color:inherit;text-decoration:underline;text-underline-offset:2px;text-decoration-color:rgba(0,0,0,0.25)">Sam</a>. Some friends and I walked north for a few months in 2021. I was really gunning for a Taco Bell sponsorship but never got one. Luckily it's the journey that counts.</p>
                 <p class="about-text">I tracked every step I took on my Garmin GPS watch and have the full route here.</p>
                 <div class="hero-summary" id="hero-summary"></div>
             </div>
